# Canonical_Technical

./: CMakeLists.txt  README.md  conanfile.txt
.conan/profiles/: macos_arm64
include/: CurlWrapper.hpp  DataFetcher.hpp
src/: CurlWrapper.cpp  DataFetcher.cpp  main.cpp
